配置评论管理员接收功能

--- a/blog-web/src/main/resources/application-dev.yml
+++ b/blog-web/src/main/resources/application-dev.yml
@@ -12,12 +12,12 @@ spring:
         # 指定SMTP server使用的协议，默认为: smtp
         protocol: smtp
         # 指定SMTP server host.
-        host: xxx
+        host: smtp.qq.com
         port: 465
         # 指定SMTP server的用户名.
-        username: xxx
+        username: 2835749050@qq.com
         # 指定SMTP server登录密码:
-        password: xxx
+        password: cxpgpoqhredwdfbc
         # 指定是否在启动时测试邮件服务器连接，默认为false
         test-connection: false
         properties:
